fix: attempt to prevent links from jumping after page load

--- a/static/style.css
+++ b/static/style.css
@@ -1,10 +1,15 @@
-@import url(./vendor/fine@v0.9.0.css) layer(fine);
+@import url(./vendor/fine@v0.9.1.css) layer(fine);
 
 :root {
   /* Calculated with https://clamping.andreasphil.com */
   --body-padding-y: clamp(2rem, 8.972vw - 0.125rem, 5rem);
   --theme-primary: 200 93% 47%;
   --theme-tint: 200;
+}
+
+html {
+  opacity: 1;
+  visibility: visible;
 }
 
 .text-c-variant {
@@ -85,6 +90,7 @@
   outline: none;
   padding: 1rem;
   text-decoration: none;
+  transition-property: color, border-color;
 }
 .bookmarks__link:is(:hover, :focus) {
   border-color: var(--primary);
